--- a/Account/templates/account/dashboard.html
+++ b/Account/templates/account/dashboard.html
@@ -4,5 +4,5 @@
 
 {% block content %}
     <h1>Panel główny</h1>
-    <p>Witaj w panelu głównym</p>
+    <p>Witaj w panelu głównym. Możesz <a href="{% url "edit" %}">edytować swój profil.</a> </p>
 {% endblock %}
